--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,6 +9,15 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Generate tags and labels
+        uses: docker/metadata-action@v5
+        id: meta
+        with:
+          images: ghcr.io/georift/k6-statsd
+          tags: |
+            type=sha
+            type=raw,value=latest,enable={{is_default_branch}}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.3.0
 
@@ -18,3 +27,5 @@ jobs:
           context: .
           file: ./Containerfile
           push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
